--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,29 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Station Usage Data Viewer</title>
+
+        <link rel="stylesheet" href="./index.css" />
     </head>
     <body>
-        <h1>Train and Metro Station Entries and Exits Data</h1>
-        <hr />
-        <p>Select a station</p>
+        <div>
+            <h1>Train and Metro Station Entries and Exits Data</h1>
+            <hr />
+            <main>
+                <label for="month">Select a month</label>
+                <select name="month" id="month">
+                    <option value="2024-12">2024-12</option>
+                    <option value="2024-11">2024-11</option>
+                    <option value="2024-10">2024-10</option>
+                    <option value="2024-09">2024-09</option>
+                    <option value="2024-08">2024-08</option>
+                </select>
+            </main>
+
+            <p>insert map of sydney trains network with entry/exit data</p>
+
+            <h1>not finished</h1>
+        </div>
+
+        <script src="./index.js"></script>
     </body>
 </html>
